# coldfront-user-management-plugin

./: LICENSE  README.md  pyproject.toml  user_management.py
user_management/: README.md  __init__.py  apps.py  grouper_user_management_client.py  signals.py  tasks.py  user_management_client.py  utils.py
user_management/management/commands/: gather_group_info.py  load_groups.py  sync_users.py
user_management/tests/: helpers.py  test_allocation_tasks.py  test_project_tasks.py  test_utils.py
